[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/GameMenu.gd" type="Script" id=1]
[ext_resource path="res://scenes/MainMenuPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/SettingsPanel.tscn" type="PackedScene" id=3]

[node name="GameMenu" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="MainMenuPanel" parent="." instance=ExtResource( 2 )]

[node name="SettingsPanel" parent="." instance=ExtResource( 3 )]

[connection signal="play_pressed" from="MainMenuPanel" to="." method="_on_MainMenuPanel_play_pressed"]
[connection signal="settings_pressed" from="MainMenuPanel" to="." method="_on_MainMenuPanel_settings_pressed"]
[connection signal="back_pressed" from="SettingsPanel" to="." method="_on_SettingsPanel_back_pressed"]
